adds base js logic, basic grid, and displays pair names in the card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
   </head>
   <body>
     <h1> Keith's Game </h1>
+      <div class="control">
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
+        <div class="column1">
+          <p name="display_pairs"></p>
+        </div>
     <script src="script.js"></script>
   </body>
 </html>
