adds core box, logic to check for matches seems a bit off, can't get the score to auto update just yet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1> Keith's Game </h1>
+      <div class="section">
+        <p name="score"></p>
+      </div>
       <div class="control">
         <div class="column1">
           <p name="display_pairs"></p>
