fixing feature to only show two cards at a time

--- a/index.html
+++ b/index.html
@@ -6,46 +6,47 @@
   </head>
   <body>
     <h1> Keith's Game </h1>
-      <div class="section">
-        <p name="score"></p>
-      </div>
       <div class="control">
-        <div class="column1">
-          <p name="display_pairs"></p>
+        <div class="column">
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
         <div class="column1">
-          <p name="display_pairs"></p>
+          <p class="display_pairs"></p>
         </div>
+        <div class="column1">
+          <p class="display_pairs"></p>
+        </div>
+      </div>
     <script src="script.js"></script>
   </body>
 </html>
