fixes same card match bug and improves disappear card function

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <h1> Keith's Game </h1>
+      <div class="section">
+        <p> class="score"></p>
+      </div>
       <div class="control">
-        <div class="column">
+        <div id='1' class="column">
           <p class="display_pairs"></p>
         </div>
         <div class="column1">
