adds flexbox and some styling, changes score to # of clicks

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href='style.css' rel='stylesheet'/>
   </head>
   <body>
-    <h1> Keith's Game </h1>
+    <!-- <h1> Keith's Game </h1> -->
       <div class="section">
         <p> class="score"></p>
       </div>
