adds more styling

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link href='style.css' rel='stylesheet'/>
   </head>
   <body>
-    <!-- <h1> Keith's Game </h1> -->
+    <h1> Keith's Game </h1>
       <div class="section">
-        <p> class="score"></p>
+        <p> </p>
       </div>
       <div class="control">
-        <div id='1' class="column">
+        <div class="column">
           <p class="display_pairs"></p>
         </div>
         <div class="column1">
