--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link href='style.css' rel='stylesheet'/>
   </head>
   <body>
-    <h1> Keith's Game </h1>
-      <div class="section">
-        <p> </p>
+      <div class="header">
+        <h1> Memory Space </h1>
+          <div class="content">
+            <p> innerHTML: "Clicks: " </p>
+          </div>
       </div>
       <div class="control">
         <div class="column">
