--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <h1> Memory Space </h1>
           <div class="content">
             <p> innerHTML: "Clicks: " </p>
+            <button type="button">reset</button>
+
           </div>
       </div>
       <div class="control">
