adds preview button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h1> Memory Space </h1>
           <div class="content">
             <p> innerHTML: "Clicks: " </p>
-            <button type="button">reset</button>
-
+            <button name="button1" type="button">reset</button>
+            <button name="button2" type="button">preview</button>
           </div>
       </div>
       <div class="control">
