reset button isn't working so I'm cutting from MVP

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       <div class="header">
         <h1> Memory Space </h1>
           <p> innerHTML: "Clicks: " </p>
-          <button name="button2" type="button">preview</button>
-          <button name="button1" type="button">reset</button>
+          <button name="button0" type="button">play</button>
+          <button name="button1" type="button">preview</button>
+          <button name="button2" type="button">reset</button>
       </div>
       <div class="control">
         <div class="column">
