adds feedback in line, and separate file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- JGZ - No validator errors, nice! -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,6 +12,8 @@
           <p> innerHTML: "Clicks: " </p>
           <button name="button" type="button">preview</button>
       </div>
+      <!-- JGZ - This totally works! but coudl you think of a way to add all of these by using JS?
+      Would make the code cleaner here, and even more importantly, would give you more flexibility if you wanted to add more squares! -->
       <div class="control">
         <div class="column">
           <p class="display_pairs"></p>
