--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Keiths Memory Game</title>
+    <title>Memory Space</title>
+    <link rel="icon" href="images/favicon.jpg">
     <link href='style.css' rel='stylesheet'/>
   </head>
   <body>
